--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                           Biometric Attendance System
                         </h1>
                         <p className="text-indigo-100 text-sm font-medium mt-1">
-                          Binyaminu Usman Polytechnic Hadejia • Final Year Project 2025
+                          Binyaminu Usman Polytechnic Hadejia
                         </p>
                       </div>
                     </div>
